fix: z-index

--- a/src/styles/components/_info-card.css
+++ b/src/styles/components/_info-card.css
@@ -1,5 +1,7 @@
 .info-card {
   font-family: var(--font-sans);
+  position: relative;
+  z-index: 3;
 
   .info-card__title {
     font-size: var(--list);
@@ -37,7 +39,7 @@
 .info-card--small {
   @media screen and (min-width: 768px) {
     width: 100%;
-    max-width: 300px;
+    max-width: 325px;
   }
 }
 
