--- a/src/styles/layouts/_section.css
+++ b/src/styles/layouts/_section.css
@@ -1,7 +1,6 @@
 .section {
   color: var(--foreground-color);
   position: relative;
-  z-index: -2;
 }
 
 .section--blue {
